--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -1,4 +1,7 @@
 .subredditCards{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-top: 60px;
     height: 100%;
 }
