--- a/frontend/src/components/Comment.css
+++ b/frontend/src/components/Comment.css
@@ -1,8 +1,12 @@
 .Comment{
     height: fit-content;
     width: 100%;
-    /* border: 2px solid pink; */
+    border: 2px solid pink;
     background-color: white;
     /* border-left: 2px lightgrey solid; */
     margin-bottom: 25px;
+}
+
+.delete-btn{
+    height: 20px;
 }
