--- a/frontend/src/components/PostCard.css
+++ b/frontend/src/components/PostCard.css
@@ -14,6 +14,7 @@
 
 .PostCard__Body{
     background-color: white;
+    width: 100%;
 }
 
 /* .PostCard__leftPanel{
@@ -40,5 +41,7 @@
 }
 
 .PostCard__Body--comments{
+    display: flex;
+    justify-content: space-between;
     font-size: 12px;
 }
