--- a/frontend/src/components/PostPage.css
+++ b/frontend/src/components/PostPage.css
@@ -39,6 +39,18 @@
     margin-right: 33px;
 }
 
+.PostPage__Button{
+    background-color: rgb(241,70,104);
+    border: white;
+    color: white;
+    height: 25px;
+    width: 55px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .error{
     color: red;
     font-weight: bold;
