--- a/frontend/src/components/HomePage.css
+++ b/frontend/src/components/HomePage.css
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(218,224,230);
     padding-top: 60px;
     height: 100%;
 }
 
 .B{
-    height: 800px;
+    height: 100%;
 }
 
 .CommunityLabel{
