--- a/frontend/src/components/CreatePost.css
+++ b/frontend/src/components/CreatePost.css
@@ -1,5 +1,5 @@
 .CreatePost{
-    height: 800px;
+    height: 100vh;
     border-bottom: solid black 1px;
     background-color: #dae0e6;
     text-align: center;
@@ -8,9 +8,11 @@
 
 .CreatePost__Box{
     background-color: white;
-    height: 300px;
+    height: 350px;
     width: 800px;
     margin: 0 auto;
+    padding: 20px;
+    border: 1px solid black;
     border-radius: 10px;
 }
 
@@ -50,4 +52,5 @@
     font-weight: bold;
     background-color: rgb(1,150,255);
     border-radius: 5px;
+    margin-top: 17px;
 }
