--- a/frontend/src/components/PostPage.css
+++ b/frontend/src/components/PostPage.css
@@ -1,8 +1,9 @@
 .PostPage{
     border: 2px solid black;
     background-color: rgb(46,47,48);
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    padding-top: 100px;
 }
 
 .PostPage__Container{
@@ -12,7 +13,7 @@
     height: 100%;
     width: 88%;
     margin: auto;
-    margin-top: 100px;
+    /* margin-top: 150px; */
 
 }
 
@@ -25,7 +26,7 @@
     height: 100%;
     width: 100%;
     border-radius: 5px;
-    margin-top: 33px;
+    /* margin-top: 33px; */
     margin-left: 33px;
     padding: 10px 40px 40px 40px;
 }
