--- a/frontend/src/components/AboutCommunity.css
+++ b/frontend/src/components/AboutCommunity.css
@@ -1,9 +1,9 @@
 .AboutCard{
-    height: 450px;
+    height: fit-content;
     width: 25%;
     border: black solid 2px;
     background-color: white;
-    padding: 10px;
+    padding: 15px;
     border-radius: 5px;
 }
 
