--- a/frontend/src/components/PostPage.css
+++ b/frontend/src/components/PostPage.css
@@ -1,7 +1,8 @@
 .PostPage{
     border: 2px solid black;
     background-color: rgb(46,47,48);
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     width: 100%;
     padding-top: 100px;
 }
@@ -11,8 +12,11 @@
     justify-content: space-between;
     background-color: rgb(218,224,230);
     height: 100%;
+    min-height: 100vh;
     width: 88%;
     margin: auto;
+    padding-top: 33px;
+    padding-right: 33px;
     /* margin-top: 150px; */
 
 }
