updated login and signup pages, fixed error bug for creating comment

--- a/frontend/src/components/Comment.css
+++ b/frontend/src/components/Comment.css
@@ -1,12 +1,13 @@
 .Comment{
     height: fit-content;
     width: 100%;
-    border-left: 1px solid grey;
-    border-right: 1px solid grey;
+    border: 1px solid grey;
+
     background-color: white;
     /* border-left: 2px lightgrey solid; */
-    padding-left: 10px;
+    padding: 10px;
     margin-top: 25px;
+    border-radius: 5px;
 }
 
 .Comment__commentandbutton{
