--- a/frontend/src/components/LoginPage.css
+++ b/frontend/src/components/LoginPage.css
@@ -1,8 +1,14 @@
+.LoginPage{
+    min-height: 100vh;
+    background-color: rgb(218,224,230);
+}
+
 .Form{
     border: solid black 2px;
     margin: 0 auto;
     width: 300px;
-    margin-top: 200px;
+    /* margin-top: 200px; */
+    background-color: white;
     border-radius: 5px;
 }
 
@@ -16,4 +22,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.LoginButton{
+    margin-top: 15px;
 }
